clusters/pibox/apps/forgejo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: forgejo
spec:
  selector:
    app: forgejo
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  selector:
    app: forgejo
  type: NodePort
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      nodePort: 32222
