clusters/pibox/apps/forgejo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-fail2ban@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: forgejo-ingress
  namespace: forgejo
spec:
  ingressClassName: my-traefik
  rules:
    - host: git.paas.lsedlar.cz
      http:
        paths:
          - backend:
              service:
                name: forgejo-http
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - git.paas.lsedlar.cz
      secretName: forgejo-cert
